--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 videoElem.exitFullscreen();
             } else if (videoElem.mozExitFullScreen) {
                 videoElem.mozExitFullScreen();
-            } else if (elvideoElemem.webkitExitFullscreen) {
+            } else if (videoElem.webkitExitFullscreen) {
                 videoElem.webkitExitFullscreen();
             } else if (videoElem.msExitFullScreen) {
                 videoElem.msExitFullScreen();
